Modifiche al GameLoop